# Androidguitar

./: .gitignore  PLAN.md  README.md  build_cmd.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_analyzer.h  effects.cpp  effects.h  engine.cpp
app/src/main/cpp/core/: audio_hal.h  file_hal.h  looper.cpp  looper.h  sensor_hal.h  tuner.cpp  tuner.h
app/src/main/cpp/hal/: audio_hal_android.cpp  file_hal_android.cpp  sensor_hal_android.cpp
app/src/main/cpp/kissfft/: _kiss_fft_guts.h  kiss_fft.cpp  kiss_fft.h  kiss_fftr.cpp  kiss_fftr.h
app/src/main/java/com/guitarfx/: MainActivity.kt
app/src/main/java/com/guitarfx/audio/: AudioBridge.kt
app/src/main/java/com/guitarfx/ui/effects/: EffectsFragment.kt
app/src/main/java/com/guitarfx/ui/tuner/: TunerFragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_effects.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml
